# pymultimonitor

./: README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
pymultimonitor/: PyMultiMonitor.py
pymultimonitor/cinterface/constants/: DisplayConfigDeviceInfo.py  DisplayConfigTopology.py  DisplayModeInfo.py  SetDisplayConfigFlag.py
pymultimonitor/cinterface/functions/winuser/: Winuser.py
pymultimonitor/cinterface/structures/displaydevicesreference/wingdi/: DisplayConfigStructures.py
pymultimonitor/cinterface/structures/monitorconfiguration/physicalmonitorenumerationapi/: PhysicalMonitorStructures.py
pymultimonitor/constants/: QueryDisplayConfigFlag.py
pymultimonitor/core/: DisplayBrightness.py  DisplayInfo.py  DisplayMonitors.py  DisplayTopology.py
pymultimonitor/output/: Brightness.py  PhysicalMonitor.py
pymultimonitor/structures/: DisplayConfigStructures.py
tests/: test_pymultimonitor.py
