[tool.poetry]
name = "pymultimonitor"
version = "0.2.0"
description = ""
authors = ["debakarr <debakar.roy@intel.com>"]
readme = "README.md"
homepage = "https://github.com/Dibakarroy1997/pymultimonitor"
repository = "https://github.com/Dibakarroy1997/pymultimonitor"
keywords = ["display", "windows"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
